packages/errors/test/__snapshots__/BROWSER_UNSUPPORTED_LAUNCH_OPTION.ansi
[31mWarning: The following browser launch options were provided but are not supported by [95melectron[39m[31m[39m
[31m[39m
[31m[90m - [39m[31m[94menv[39m[31m[39m